--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.100.0
 uvicorn[standard]==0.23.1
-fer==21.1.0
+fer>=22.5.1
+
 numpy==1.26.4
 opencv-python-headless==4.8.0.74
 Pillow==10.0.0
