--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-fastapi==0.100.0
-uvicorn[standard]==0.23.1
-fer>=22.5.1
-
-numpy==1.26.4
-opencv-python-headless==4.8.0.74
-Pillow==9.5.0
-
-typing_extensions==4.7.1
+langchain
+langchain_core
+langchain_groq
+langchain_community
+langchain_huggingface
+sentence-transformers
+faiss-cpu
+tf-keras
